Permissions cleanup. Fix meaning of superadmin. Add repoAdmin group to allow to editing repositories. Added new bouncer for permission group. Fixed lots of permission references in twig. Fix adding deployments with an invalid url.

--- a/app/templates/environment/environment.twig
+++ b/app/templates/environment/environment.twig
@@ -23,7 +23,7 @@
     <div>
         {% if isUserAdmin(currentUser) %}
             <a class="btn--action" href="{{ urlFor('environment.admin.edit', {id: env.id}) }}">Edit</a>
-            {% if not servers and canUserDelete(currentUser) %}
+            {% if not servers and isUserAdmin(currentUser) %}
                 <a class="btn--destructive secondary-action" href="{{ urlFor('environment.admin.remove.handle', {id: env.id}) }}">Remove Environment</a>
             {% endif %}
         {% endif %}
