--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -47,3 +47,4 @@ $hal-purple: rgb(180, 120, 175);
 $hal-cyan: rgb(70, 120, 145);
 $hal-red: rgb(140, 55, 70);
 $hal-blue: rgb(65, 130, 215);
+$hal-green: rgb(15, 120, 50);
