Update log header

--- a/app/templates/push/push.twig
+++ b/app/templates/push/push.twig
@@ -127,7 +127,7 @@
         </dl>
     </div>
 
-    <h3>Push Log</h3>
+    <h3>Event Log</h3>
     {% if push.logs.isEmpty %}
         <p>No push events found.</p>
     {% else %}
