--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -15,7 +15,7 @@ $red: #d63620;
 $orange: #ff7c00;
 $dark-orange: #cc6300;
 
-$yellow: #e0a63a;
+$yellow: #fffd47;
 $light-yellow: #fafad2;
 
 $warning-color: $orange;
