--- a/sass/partials/_js.scss
+++ b/sass/partials/_js.scss
@@ -20,7 +20,7 @@
     display: none;
 
     li.selected{
-      background-color: $yellow;
+      background-color: $highlight-color;
     }
 }
 
@@ -39,7 +39,7 @@
     }
 
     li:hover{
-        background-color: $yellow;
+        background-color: $highlight-color;
         cursor: pointer;
     }
 
