Change build/push urls to be plural

--- a/app/templates/help/api.twig
+++ b/app/templates/help/api.twig
@@ -75,7 +75,7 @@
     <ul>
         <li><a href="{{ urlFor('api.builds', {id: ':id'}) }}">{{ urlFor('api.builds', {id: ':id'}) }}</a></li>
         <li><a href="{{ urlFor('api.build', {id: ':id'}) }}">{{ urlFor('api.build', {id: ':id'}) }}</a></li>
-        <li><a href="{{ urlFor('api.build.log', {id: ':id'}) }}">{{ urlFor('api.build.log', {id: ':id'}) }}</a> [NYI]</li>
+        <li><a href="{{ urlFor('api.build.logs', {id: ':id'}) }}">{{ urlFor('api.build.logs', {id: ':id'}) }}</a> [NYI]</li>
     </ul>
 
     <h4>Pushes</h4>
@@ -83,7 +83,7 @@
     <ul>
         <li><a href="{{ urlFor('api.pushes', {id: ':id'}) }}">{{ urlFor('api.pushes', {id: ':id'}) }}</a></li>
         <li><a href="{{ urlFor('api.push', {id: 'id'}) }}">{{ urlFor('api.push', {id: ':id'}) }}</a></li>
-        <li><a href="{{ urlFor('api.push.log', {id: ':id'}) }}">{{ urlFor('api.push.log', {id: ':id'}) }}</a> [NYI]</li>
+        <li><a href="{{ urlFor('api.push.logs', {id: ':id'}) }}">{{ urlFor('api.push.logs', {id: ':id'}) }}</a> [NYI]</li>
     </ul>
 
     <h3>Protected Endpoints</h3>
