Double encrypt session data

--- a/app/templates/admin/super.twig
+++ b/app/templates/admin/super.twig
@@ -31,6 +31,14 @@
                     </dd>
                 </dl>
                 <dl>
+                    <dt class="split--left__title"><strong>Session Encryption key</strong></dt>
+                    <dd class="split--left__value">
+                        <div class="pre-wrapper">
+                            <pre>{{ session_encryption_key }}</pre>
+                        </div>
+                    </dd>
+                </dl>
+                <dl>
                     <dt class="split--left__title"><strong>HAL 9000 Push File</strong></dt>
                     <dd class="split--left__value">
                         {% if pushfile %}
