Fix minor formatting issues

--- a/app/templates/admin/super.twig
+++ b/app/templates/admin/super.twig
@@ -5,11 +5,11 @@
 {% block content %}
 
     {% if doctrine_status %}
-        <div class="alert-bar alert-bar--success">Doctrine Caches Cleared!</div>
+        <div class="alert-bar--success">Doctrine Caches Cleared!</div>
     {% endif %}
 
     {% if permission_status %}
-        <div class="alert-bar alert-bar--success">Permission Caches Cleared!</div>
+        <div class="alert-bar--success">Permission Caches Cleared!</div>
     {% endif %}
 
     <h2>Super Admin Dashboard</h2>
