--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -18,9 +18,12 @@ $dark-orange: #cc6300;
 $yellow: #fffd47;
 $light-yellow: #fafad2;
 
+$green: #00c92c;
+
 $warning-color: $orange;
 $error-color: $red;
-$success-color: #00c92c;
+$success-color: $green;
+$info-color: $blue;
 
 $highlight-color: $yellow;
 
